re PR c++/40155 ([c++0x] variadic template pack problem)

Fix PR c++/40155

gcc/cp/ChangeLog:
	c++/40155
	* pt.c (unify_pack_expansion): In non-deduced contexts, re-use template
	arguments that were previously deduced.

gcc/testsuite/ChangeLog:
	c++/40155
	* g++.dg/cpp0x/variadic-unify-2.C: New test.

From-SVN: r155705